[package]
name = "wasm-benchmark-experiments"
version = "0.1.0"
authors = ["Brian Lawrence <tideofwords@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
plonky3_exploration = {path = "../backend-exploration/plonky3-exploration"}
starky-exploration = {path = "../backend-exploration/starky-exploration"}
getrandom = { version = "0.3", features = ["wasm_js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
# console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
